--- a/.releaserc
+++ b/.releaserc
@@ -8,8 +8,7 @@
   ],
   "plugins": [
     [
-      "@semantic-release/commit-analyzer",
-      {
+      "@semantic-release/commit-analyzer", {
         "releaseRules": [
           { "type": "build", "scope": "Needs bump", "release": "patch" }
         ]
@@ -18,6 +17,16 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "gradle-semantic-release-plugin",
+    [
+      "@semantic-release/git",
+      {
+        "assets": [
+          "CHANGELOG.md",
+          "gradle.properties"
+        ],
+        "message": "chore: Release v${nextRelease.version}"
+      }
+    ],
     [
       "@semantic-release/github",
       {
@@ -32,7 +41,7 @@
     [
       "@saithodev/semantic-release-backmerge",
       {
-        "backmergeBranches": [{ "from": "main", "to": "dev" }],
+        "backmergeBranches": [{"from": "main", "to": "dev"}],
         "clearWorkspace": true
       }
     ]
