--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,23 +43,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-# Comentado: removidas etapas de release e attest
-#      - name: Import GPG key
-#        uses: crazy-max/ghaction-import-gpg@v6
-#        with:
-#          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-#          passphrase: ${{ secrets.GPG_PASSPHRASE }}
-#          fingerprint: ${{ vars.GPG_FINGERPRINT }}
-
-#      - name: Release
-#        uses: cycjimmy/semantic-release-action@v4
-#        id: release
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-#      - name: Attest
-#        if: steps.release.outputs.new_release_published == 'true'
-#        uses: actions/attest-build-provenance@v2
-#        with:
-#          subject-name: 'ReVanced Patches ${{ steps.release.outputs.new_release_git_tag }}'
-#          subject-path: patches/build/libs/patches-*.rvp
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: patches-build
+          path: patches/build/libs/
