--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,22 +29,25 @@ jobs:
       - name: Cache Gradle
         uses: burrunan/gradle-cache-action@v3
 
+      - name: Clean
+        run: ./gradlew clean
+
       - name: Build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./gradlew :patches:buildAndroid clean
+        run: ./gradlew :patches:buildAndroid
 
-      - name: Find build artifact
-        id: find-artifact
-        run: |
-          echo "artifact_path=$(find patches/build -type f -name '*.rvp' | head -n 1)" >> $GITHUB_OUTPUT
-      
-      - name: Show found artifact
-        run: echo "Arquivo encontrado em ${{ steps.find-artifact.outputs.artifact_path }}"
-      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: patches-build
-          path: ${{ steps.find-artifact.outputs.artifact_path }}
-
+          path: patches/build/libs/**
